# ECMake

./: .gitignore  CMakeLists.txt  README.md
ecmake/: ECExecutable.cmake  ECLibrary.cmake  ECLibraryDynamic.cmake  ECLibraryStatic.cmake  ECMake.cmake  ECNamespace.cmake  ECParseArgs.cmake  ECPython.cmake  ECTests.cmake  ECUtil.cmake  ECvcpkg.cmake
tests/basic/src/: main.cpp
tests/basic_dylib/: CMakeLists.txt
tests/basic_dylib/src/: sum.h
tests/basic_exec/: CMakeLists.txt
tests/basic_exec/src/: main.cpp
tests/basic_nanobind/: CMakeLists.txt
tests/basic_nanobind/bind_python/: example.cpp
tests/basic_pybind11/: CMakeLists.txt
tests/basic_pybind11/bind_python/: example.cpp
tests/basic_stlib/: CMakeLists.txt
tests/basic_stlib/src/: sum.cpp  sum.h
tests/basic_tests_catch2/: CMakeLists.txt
tests/basic_tests_catch2/tests/: example.cpp
tests/basic_tests_doctest/: CMakeLists.txt
tests/basic_tests_doctest/tests/: example.cpp
tests/basic_tests_gtest/: CMakeLists.txt
tests/basic_tests_gtest/tests/: example.cpp
tests/inter_exec_with_cuda/: CMakeLists.txt
tests/inter_exec_with_cuda/src/: main.cpp  version.cpp  version.h
tests/inter_exec_with_deps/: CMakeLists.txt
tests/inter_exec_with_deps/dylib/: sum.h
tests/inter_exec_with_deps/dylib/src/: sum.cpp  sum.h
tests/inter_exec_with_deps/exec/: main.cpp
tests/inter_exec_with_deps/stlib/: mul.cpp
tests/inter_exec_with_deps/stlib/src/: mul.h
